remove extra classes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             }
 
             .hero h1,
-            .hero-heading {
+            .hero_heading {
                 font-size: 24px !important;
                 white-space: normal !important;
                 text-align: center !important;
@@ -38,20 +38,20 @@
 
 
             .hero p,
-            .hero-desc {
+            .hero_desc {
                 font-size: 14px !important;
                 text-align: center !important;
                 padding-bottom: 24px !important;
             }
 
-            .grid-4 td {
+            .grid td {
                 display: inline-block !important;
                 width: 48% !important;
                 margin: 1% !important;
                 text-align: center !important;
             }
 
-            .brand-grid td {
+            .brand_grid td {
                 display: inline-block !important;
                 width: 48% !important;
                 margin: 1% !important;
@@ -60,14 +60,6 @@
 
             .category_padding {
                 padding: 20px 50px 0 70px !important;
-            }
-
-            .product-grid td {
-                display: inline-block !important;
-                width: 48% !important;
-                margin: 1% !important;
-                text-align: center !important;
-                vertical-align: top !important;
             }
 
             .d_inline_grid {
@@ -129,7 +121,7 @@
 <body>
     <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #ffffff;">
         <tr>
-            <td align="center">
+            <td>
                 <table class="wrapper" width="650" cellpadding="0" cellspacing="0" border="0" style="margin: 0 auto;">
 
                     <!-- Logo Section -->
@@ -151,7 +143,7 @@
                             <table width="100%">
                                 <tr>
                                     <td style="vertical-align: top;">
-                                        <h1 class="hero-heading"
+                                        <h1 class="hero_heading"
                                             style="font-size: 35px; font-weight: 600; color: #000000; line-height: 1.3; padding-bottom: 20px; white-space: nowrap;">
                                             Get 10% Off Your First Order
                                         </h1>
@@ -178,109 +170,105 @@
                     </tr>
 
                     <tr>
-                        <td align="center" class="category_padding" style="padding: 30px 40px 60px 40px;">
-                            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="grid-4">
+                        <td class="category_padding" style="padding: 30px 40px 60px 40px;">
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="grid">
 
                                 <tr>
-                                    <td align="center" class="category" style="padding-bottom: 30px;">
+                                    <td class="category" style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d407c87bdd14770ecbeb.png"
                                             alt="Clinical Supplies" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 91px;">
-                                            Clinical Supplies</div>
+                                            Clinical Supplies</h2>
                                     </td>
 
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d4b9bb53d413743f574f.png"
                                             alt="Clinical Equipment" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 94px;">
-                                            Clinical Equipment</div>
+                                            Clinical Equipment</h2>
                                     </td>
 
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d4dec87bdd14770ecc11.png"
                                             alt="Modalities" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 110px;">
-                                            Modalities, Leads & Electrodes</div>
+                                            Modalities, Leads & Electrodes</h2>
                                     </td>
 
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d627ba96340d3e1756b6.png"
                                             alt="Exercise Equipment" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 100px;">
-                                            Exercise Equipment</div>
+                                            Exercise Equipment</h2>
                                     </td>
                                 </tr>
-
-                                <!-- Row 2 -->
                                 <tr>
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d6a94ffc4b5e3d4f77c8.png"
                                             alt="Diagnostic Tools" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 120px;">
-                                            Diagnostic & Evaluation Tools</div>
+                                            Diagnostic & Evaluation Tools</h2>
                                     </td>
 
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d6c5c87bdd14770ecc7d.png"
                                             alt="Orthopedics" width="110" style="display: block;">
-                                        <div style="font-size: 14px; color: #000000; padding-top: 10px; ">Orthopedics
-                                        </div>
+                                        <h2 style="font-size: 14px; color: #000000; padding-top: 10px; ">Orthopedics
+                                        </h2>
                                     </td>
 
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d6d7ba96340d3e1756d5.png"
                                             alt="Hot & Cold Therapy" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 100px;">
-                                            Hot & Cold Therapy</div>
+                                            Hot & Cold Therapy</h2>
                                     </td>
 
-                                    <td align="center" style="padding-bottom: 30px;">
+                                    <td style="padding-bottom: 30px;">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d6e64ffc4b5e3d4f77d6.png"
                                             alt="Patient Care" width="110" style="display: block;">
-                                        <div style="font-size: 14px; color: #000000; padding-top: 10px;">Patient Care
-                                        </div>
+                                        <h2 style="font-size: 14px; color: #000000; padding-top: 10px;">Patient Care
+                                        </h2>
                                     </td>
                                 </tr>
-
-                                <!-- Row 3 -->
                                 <tr>
-                                    <td align="center" class="pb_30">
+                                    <td class="pb_30">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d728c87bdd14770ecc98.png"
                                             alt="Hot & Cold Therapy" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 75px;">
-                                            Hand Therapy</div>
+                                            Hand Therapy</h2>
                                     </td>
 
-                                    <td align="center" class="pb_30">
+                                    <td class="pb_30">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d73f4ffc4b5e3d4f77ed.png"
                                             alt="Chiropractic Tables" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 116px;">
-                                            Chiropractic Tables</div>
+                                            Chiropractic Tables</h2>
                                     </td>
 
-                                    <td align="center" class="pb_30">
+                                    <td class="pb_30">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d74fba96340d3e1756ed.png"
                                             alt="Special Education" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 117px;">
                                             Special Education & Life Skills
-                                        </div>
+                                        </h2>
                                     </td>
 
-                                    <td align="center" class="pb_30">
+                                    <td class="pb_30">
                                         <img src="https://img.mailinblue.com/8005023/images/content_library/original/6864d815f314f0f298485379.png"
                                             alt="Training Room" width="110" style="display: block;">
-                                        <div
+                                        <h2
                                             style="font-size: 14px; color: #000000; padding-top: 10px; max-width: 120px;">
-                                            Training Room Furnishings</div>
+                                            Training Room Furnishings</h2>
                                     </td>
                                 </tr>
 
@@ -296,37 +284,36 @@
                     </tr>
 
                     <tr>
-                        <td align="center" style="padding: 30px 40px 0px 40px;">
-                            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="brand-grid">
+                        <td style="padding: 30px 40px 0px 40px;">
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="brand_grid">
                                 <tr>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864df1bc87bdd14770ecea8.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864df1bc87bdd14770ecea8.png"
                                             alt="Athletic Edge" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864eba6ba96340d3e175dda.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864eba6ba96340d3e175dda.png"
                                             alt="Chattanooga" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ebcbc87bdd14770ed38a.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ebcbc87bdd14770ed38a.png"
                                             alt="Dynamometer" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ebdbbb53d413743f5f21.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ebdbbb53d413743f5f21.png"
                                             alt="Hausmann" width="133"></td>
                                 </tr>
                                 <tr>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ebfff314f0f298485aa7.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ebfff314f0f298485aa7.png"
                                             alt="Matrix" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec11c87bdd14770ed3ac.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec11c87bdd14770ed3ac.png"
                                             alt="Normatec" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec1fc87bdd14770ed3b1.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec1fc87bdd14770ed3b1.png"
                                             alt="Richmar" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec67ba96340d3e175e34.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec67ba96340d3e175e34.png"
                                             alt="SciFit" width="133"></td>
                                 </tr>
-                                <!-- Last row -->
                                 <tr>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec7cbb53d413743f5f65.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec7cbb53d413743f5f65.png"
                                             alt="Shuttle Systems" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec8ac87bdd14770ed3de.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec8ac87bdd14770ed3de.png"
                                             alt="Spirit Fitness" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec9aba96340d3e175e4d.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864ec9aba96340d3e175e4d.png"
                                             alt="Therm-X" width="133"></td>
-                                    <td><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864eca8bb53d413743f5f7e.png"
+                                    <td style="padding-bottom: 16px;"><img src="https://img.mailinblue.com/8005023/images/content_library/original/6864eca8bb53d413743f5f7e.png"
                                             alt="Total Gym" width="133"></td>
                                 </tr>
                             </table>
