--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
                             <table class="max_w_220" cellpadding="0" cellspacing="0" border="0"
                                 style="max-width: 160px; width: 100%; text-align: center; margin: auto;">
                                 <tr>
-                                    <td class="pb_16" style="padding-bottom: 20px; text-align: center; margin: auto;">
+                                    <td class="pb_16" style="padding-bottom: 10px; text-align: center; margin: auto;">
                                         <img width="56" height="56"
-                                            src="https://osvrhuyns5iifuh6.public.blob.vercel-storage.com/products-services-AGP9e8wNVFLd9S3VmGnIvZL1Fc1Y5C.png"
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/68662dc5503035101ca1cc17.png"
                                             alt="products-image">
                                     </td>
                                 </tr>
@@ -399,8 +399,8 @@
                                     <td>
                                         <p class="max_w_220"
                                             style="font-size: 14px; color: black; opacity: 80%; font-weight: 400; max-width: 160px; line-height: 160%; text-align: center;">
-                                            Delivering trusted rehab technology and expert support for over
-                                            69 years.</p>
+                                        For over 69 years, we've provided industry-leading technology and expert service, enabling better patient outcomes and
+                                        streamlined supply chain solutions..</p>
                                     </td>
                                 </tr>
                             </table>
@@ -409,9 +409,9 @@
                             <table class="max_w_220" cellpadding="0" cellspacing="0" border="0"
                                 style="max-width: 187px; width: 100%; text-align: center; margin: auto;">
                                 <tr>
-                                    <td class="pb_16" style="padding-bottom: 20px; text-align: center; margin: auto;">
+                                    <td class="pb_16" style="padding-bottom: 10px; text-align: center; margin: auto;">
                                         <img width="56" height="56"
-                                            src="https://osvrhuyns5iifuh6.public.blob.vercel-storage.com/solutions-experts-C7Ys2McGOnZ3EsbLdgolWf5FelixXz.png"
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/68662e04a2c53a9a8fc4b35d.png"
                                             alt="vercel-storage">
                                     </td>
                                 </tr>
@@ -419,15 +419,17 @@
                                     <td>
                                         <p
                                             style="font-size: 16px; margin: auto; max-width: 170px; text-align: center; font-weight: 500; color: black; line-height: 120%; padding-bottom: 8px;">
-                                            Rehab Solutions Experts</p>
+                                            Physical Rehab Solutions Experts
+</p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p class="max_w_220"
                                             style="font-size: 14px; color: black; opacity: 80%; font-weight: 400; line-height: 160%; text-align: center;">
-                                            125+ years of combined team experience ensures reliable,
-                                            knowledgeable service.</p>
+                                            Our staff boasts over 125 years of combined experience, with an average tenure of 15 years, ensuring exceptional
+                                            expertise and continuity in service.
+</p>
                                     </td>
                                 </tr>
                             </table>
@@ -437,9 +439,9 @@
                                 style="max-width: 160px; width: 100%; text-align: center; margin: auto;">
                                 <tr>
                                     <td class="pb_16"
-                                        style="padding-bottom: 27px; padding-top: 11px; text-align: center; margin: auto;">
-                                        <img width="35" height="35"
-                                            src="https://osvrhuyns5iifuh6.public.blob.vercel-storage.com/glove-delivery-lngI9tdSSedMl16qGkBG7I13TtRniI.png"
+                                        style="padding-bottom: 20px; text-align: center; margin: auto;">
+                                        <img width="56" height="56"
+                                            src="https://img.mailinblue.com/8005023/images/content_library/original/68662e4ba2c53a9a8fc4b375.png"
                                             alt="glove-delivery">
                                     </td>
                                 </tr>
@@ -447,14 +449,14 @@
                                     <td>
                                         <p
                                             style="font-size: 16px; text-align: center; font-weight: 500; color: black; line-height: 120%; padding-bottom: 8px; max-width: 132px; margin: auto;">
-                                            White-Glove Delivery</p>
+                                            True White Glove Experience</p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p class="max_w_220"
                                             style="font-size: 14px; color: black; opacity: 80%; font-weight: 400; line-height: 160%; text-align: center;">
-                                            From consult to install — seamless, reliable delivery.</p>
+                                        From consultation to installation, our white-glove delivery service sets the standard in the industry.</p>
                                     </td>
                                 </tr>
                             </table>
@@ -662,7 +664,7 @@
                                             style="max-width: 339px; margin: auto; opacity: 70%; font-weight: 400; font-size: 14px; line-height: 160%;">
                                             You're receiving this email because you're part of the Cornish
                                             Medical
-                                            community.p>
+                                            community.</p>
                                     </td>
                                 </tr>
 
