--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <td class="p_30_24" style="padding: 60px 40px 60px;">
                 <table class="text_center" cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
                     <tr class="d_inline_grid">
-                        <td class="pb_16">
+                        <td class="pb_16" style="vertical-align: top !important;">
                             <table class="max_w_220" cellpadding="0" cellspacing="0" border="0"
                                 style="max-width: 160px; width: 100%; text-align: center; margin: auto;">
                                 <tr>
@@ -405,7 +405,7 @@
                                 </tr>
                             </table>
                         </td>
-                        <td class="pb_16">
+                        <td class="pb_16" style="vertical-align: top !important;">
                             <table class="max_w_220" cellpadding="0" cellspacing="0" border="0"
                                 style="max-width: 187px; width: 100%; text-align: center; margin: auto;">
                                 <tr>
@@ -434,7 +434,7 @@
                                 </tr>
                             </table>
                         </td>
-                        <td class="pb_16">
+                        <td class="pb_16" style="vertical-align: top !important;">
                             <table class="max_w_220" cellpadding="0" cellspacing="0" border="0"
                                 style="max-width: 160px; width: 100%; text-align: center; margin: auto;">
                                 <tr>
