remove extra dot

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                         <p class="max_w_220"
                                             style="font-size: 14px; color: black; opacity: 80%; font-weight: 400; max-width: 160px; line-height: 160%; text-align: center;">
                                         For over 69 years, we've provided industry-leading technology and expert service, enabling better patient outcomes and
-                                        streamlined supply chain solutions..</p>
+                                        streamlined supply chain solutions.</p>
                                     </td>
                                 </tr>
                             </table>
