--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </head>
 
 <body>
-    <table cellpadding="0" cellspacing="0" border="0" style="background-color: #E0E0E0; padding: 90px 0; width: 100%;"
+    <table cellpadding="0" cellspacing="0" border="0" style="background-color: #E0E0E0; padding: 90px 0; width: 100%; max-width: 1920px; margin: auto;"
         class="table_bg">
         <tr>
             <td>
